# rust-syntheticdata-code-generator

./: Cargo.toml  Makefile  README.md
config/: metrics.json  queue-metrics.json
src/: main.rs
src/cli/: schema.rs
src/custom/: error.rs
src/data/: generate.rs
