[package]
name = "rust-syntheticdata-code-generator"
version = "0.1.0"
edition = "2024"
  
[features]
use-library = ["sd-gen-metrics"]
 
[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
# github and other library dependencies
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
sd-gen-metrics = { path = "../rust-syntheticdata-generator-metrics/", optional = true }

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization

 
